1.5.1 -> 1.x.x
    Waking up of producer components re-introduced (bugfix)

    * When a component collects a message from an inbox; all producer
      components with outboxes linked to that inbox will be woken.

    Additions to the Axon Test Suite providing test coverage of this
    facility.

1.5.0 -> 1.5.1
    Minor improvements to bring threaded component capabilities closer
    to those of ordinary components.

    * Size limited inboxes now supported by threaded components
    * Pausing now supported by threaded components


    ThreadedComponent.py
    * Synchronous box support: now supports making inboxes size limited
      and delivery to a size limited inbox on another component - namely
      the threaded component will correctly receive a NoSpaceInBox
      exception.

    * Internal queues between the inboxes/outboxes, and the thread are
      now size limited (default size of 10). This is a dependency of the
      synchronous box support.

    * self.pause() now implemented. A threaded component will sleep until
      an (optional) timeout expires, or a message arrives.


1.1.2 -> 1.5.0
    Major subsystem changes aimed at performance enhancements

    MESSAGE PASSING AND DELIVERY OPTIMISATION CHANGES
 
    * Boxes are now discrete objects. This change has occured to enable the
      use of direct (effectively "zero copy" delivery).

    * This has meant the postman has been deleted - components no longer
      have a postman associated with them. This also dramatically frees
      up CPU cycles for components rather than the communications system.

    * To replace the structural tracking, a "postoffice" class has been
      created instead. This, however, is passive rather than active.

    * Because the death of a component no longer also means the death of a
      postman, microprocess has been simplified to remove the concept of
      activity creator. This removes the knock on complexity in both the
      scheduler and inside Component.
